<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPasswordActivity"
    android:padding="30dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_old"
        tools:ignore="MissingConstraints"
        android:text="@string/old_password"
        android:textSize="17sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_old"
        android:layout_marginTop="10dp"
        android:hint="@string/old_password"
        android:textSize="20sp"
        android:fontFamily="@font/open_sans_semibold"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_old"
        app:layout_constraintTop_toBottomOf="@id/tv_old"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_new"
        android:text="@string/new_password"
        android:textSize="17sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/et_old"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_new"
        android:layout_marginTop="10dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:fontFamily="@font/open_sans_semibold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/et_old"
        app:layout_constraintTop_toBottomOf="@id/tv_new" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_re_new"
        android:text="@string/retype_new_password"
        android:textSize="17sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/et_new"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:layout_width="278dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_re_new"
        android:layout_marginTop="10dp"
        android:hint="@string/retype_new_password"
        android:fontFamily="@font/open_sans_semibold"
        android:inputType="textPassword"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/et_new"
        app:layout_constraintTop_toBottomOf="@id/tv_re_new" />
    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/primary_btn_bg"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/confirm"
        android:onClick="confirm_OnClick"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_re_new" />

</androidx.constraintlayout.widget.ConstraintLayout>
