<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    android:padding="30dp">

    <ImageView
        android:id="@+id/code_sign_image"
        android:layout_width="349dp"
        android:layout_height="134dp"
        android:layout_marginTop="15dp"
        android:foregroundGravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tag_signs" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_time"
        tools:ignore="MissingConstraints"
        android:text="@string/free_time"
        android:textSize="17sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/code_sign_image"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_time"
        android:layout_marginTop="10dp"
        android:layout_marginStart="45dp"
        android:hint="@string/free_time"
        android:textSize="20sp"
        android:fontFamily="@font/open_sans_semibold"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_time"
        app:layout_constraintTop_toBottomOf="@id/tv_time"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_desc"
        android:text="@string/desc"
        android:textSize="17sp"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/et_time"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/et_desc"
        android:layout_marginTop="10dp"
        android:layout_marginStart="45dp"
        android:hint="@string/desc"
        android:inputType="textMultiLine"
        android:fontFamily="@font/open_sans_semibold"
        android:textSize="20sp"
        android:gravity="top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/et_time"
        app:layout_constraintTop_toBottomOf="@id/tv_desc" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/primary_btn_bg"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/post"
        android:onClick="post_OnClick"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>
