<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_screen_image" />

    <!--<TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="Login"
        android:textColor="@color/colorPrimary"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_image" />
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mobileLayout"
        app:layout_constraintTop_toBottomOf="@id/login_image"
        android:layout_marginTop="60dp"
        android:orientation="horizontal"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:padding="16dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/phonemo"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/et_phonenum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:textColorHint="#000000"
            android:layout_marginLeft="15dp"
            android:background="#00000000"
            android:letterSpacing="0.1"
            android:textSize="16dp"
            android:inputType="number"
            android:textColor="#000"
            android:gravity="start"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        app:layout_constraintTop_toBottomOf="@id/mobileLayout"
        android:background="#4a5a71"></LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordLayout"
        app:layout_constraintTop_toBottomOf="@id/mobileLayout"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_marginEnd="35dp"
        android:layout_marginStart="35dp"
        android:padding="16dp">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/pswrd"
            android:layout_gravity="center"/>
        <EditText
            android:id="@+id/et_pswrd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="#000000"
            android:layout_marginLeft="15dp"
            android:background="#00000000"
            android:inputType="textPassword"
            android:textSize="16dp"
            android:textColor="#000"
            android:gravity="start"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        android:background="#4a5a71"></LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/primary_btn_bg"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

    <TextView
        android:id="@+id/tvac_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/open_sans_bold"
        android:text=""
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/login_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_marginEnd="16dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="@+id/login_btn"
        app:layout_constraintTop_toTopOf="@+id/login_btn" />

    <TextView
        android:id="@+id/login_form_feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/new_user_create_new_account"
        android:onClick="createNewAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>